force-app/main/default/objects/Trafic_Added__c/Trafic_Added__c.object-meta.xml
<CustomObject>
    <description>the additional traffic estimate</description>
    <label>Trafic Ajouté</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trafic Ajouté</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>