force-app/main/default/objects/Trafic_Added__c/fields/Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Added_Percentage__c</fullName>
    <label>Pourcentage Ajouté</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>