force-app/main/default/objects/Trafic_Added__c/fields/Arriving_Time__c.field-meta.xml
<CustomField>
    <fullName>Arriving_Time__c</fullName>
    <label>Créneau Horaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entre 9 et 10 H</fullName>
            </value>
            <value>
                <fullName>Entre 10 et 11 H</fullName>
            </value>
            <value>
                <fullName>Entre 15 et 16 H</fullName>
            </value>
            <value>
                <fullName>Entre 16 et 17 H</fullName>
            </value>
            <value>
                <fullName>Entre 17 et 18 H</fullName>
            </value>
            <value>
                <fullName>Entre 18 et 19 H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>