force-app/main/default/objects/Trafic_Added__c/fields/TECH_DEPARTMENT_ARRIVINGTIME__c.field-meta.xml
<CustomField>
    <fullName>TECH_DEPARTMENT_ARRIVINGTIME__c</fullName>
    <formula>TEXT(Arriving_Department__c)  +  TEXT(Arriving_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_DEPARTMENT_ARRIVINGTIME</label>
    <type>Text</type>
</CustomField>