force-app/main/default/objects/Trafic_Added__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Arriving_Department__c</columns>
    <columns>Arriving_Time__c</columns>
    <columns>Added_Percentage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>